[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/intro.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/components/ui/boost_menu/movement_speed/UIMovementSpeed.gd" type="Script" id=2]
[ext_resource path="res://scenes/components/ui/boost_menu/textures/minus.png" type="Texture" id=3]
[ext_resource path="res://scenes/components/ui/boost_menu/textures/plus.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 11
extra_spacing_top = 2
extra_spacing_bottom = -4
font_data = ExtResource( 1 )

[node name="UIMovementSpeed" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Title" type="Label" parent="."]
modulate = Color( 0.262745, 0.627451, 0.278431, 1 )
margin_left = -347.0
margin_right = -128.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0.980392, 0.980392, 0.980392, 1 )
custom_fonts/font = SubResource( 2 )
text = "Скорость движения"
align = 2
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Hint" type="Label" parent="."]
modulate = Color( 0.262745, 0.627451, 0.278431, 1 )
margin_left = -315.0
margin_top = 16.0
margin_right = -128.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0.980392, 0.980392, 0.980392, 1 )
custom_fonts/font = SubResource( 6 )
text = "Влияет на дальность рывка"
align = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Value" type="Label" parent="."]
modulate = Color( 0.262745, 0.627451, 0.278431, 1 )
margin_left = -112.0
margin_right = -87.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0.980392, 0.980392, 0.980392, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Minus" type="Button" parent="."]
margin_left = -64.0
margin_right = -32.0
margin_bottom = 26.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 3 )
flat = true
icon_align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Plus" type="Button" parent="."]
margin_left = -24.0
margin_right = 8.0
margin_bottom = 26.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 4 )
flat = true
icon_align = 1
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="Minus" to="." method="_on_Minus_pressed"]
[connection signal="pressed" from="Plus" to="." method="_on_Plus_pressed"]
